--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,11 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  
 }
 
 .App {
-  margin: 0% 5% 0% 5%;
+  margin-top: 4px;
   text-align: center;
 }
 
@@ -19,17 +20,21 @@ body {
 }
 
 .navWrapper {
-  margin-bottom: 2%;
+ margin-bottom:2%;
 }
+
 
 .filterWrapper {
-  margin: 2% 0% 2% 0%;
+  margin: 2% 0;
+  font-size: 1.5em;
+  display: flex;
+  align-items: center;
 }
-
 .headerText {
   color: #F5A9BC;
   font-size: 3em;
   margin: 0% 2% 0% 2%;
+  text-align: center;
 }
 
 .largeHeader {
@@ -78,9 +83,18 @@ ul {
   margin: auto;
 }
 
+.ui.grid.container {
+  margin-top: 40px; 
+  padding: 10px;    
+}
 
+
+.ui.grid.container {
+  max-width: 1200px; 
+  margin: auto;      
+}
 .pigTile {
-  display: inline;
+  display: inline block;
   background-repeat: no-repeat;
   background-position: center 90%;
   float: left;
@@ -89,6 +103,7 @@ ul {
   outline: #3B0B0B dotted thick;
   transition: 0.75s;
   opacity: 1;
+  border-radius: 10px;
 }
 
 .minBackgroundSneak {
@@ -139,6 +154,10 @@ ul {
   padding: 1%;
   clear: both;
 }
+.headerText{
+padding-bottom: 50px;
+
+}
 
 
 @keyframes App-logo-spin {
@@ -149,4 +168,21 @@ ul {
   to {
     transform: rotate(360deg);
   }
+  
+}
+
+
+
+.form-column {
+  display: flex;
+  flex-direction: column; /* Aligns elements in a column */
+  gap: 10px; /* Adds space between each element */
+  width: 100%;
+  text-align: center;
+}
+
+.form-column input,
+.form-column label,
+.form-column button {
+  width: 50%; /* Optional: makes inputs and button fill the container's width */
 }
